--- a/src/assets/styles/element.scss
+++ b/src/assets/styles/element.scss
@@ -237,3 +237,10 @@
 .el-dialog .el-dialog__header{
   z-index: 2000;
 }
+.el-table .cell{
+  text-overflow: unset !important;
+  padding: 0 !important;
+}
+.el-tooltip__popper{ // 表格tooltip限制一下最大宽度
+  max-width: 800px !important;
+}
